# caldeira_legget_examples

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
caldeira_legget_examples/: util.py
caldeira_legget_examples/free_particle/: dynamics.py  kernel.py  plot.py  system.py
caldeira_legget_examples/harmonic/: dynamics.py  plot.py  system.py
caldeira_legget_examples/periodic/: dynamics.py  plot.py  system.py
caldeira_legget_examples/sodium_copper/: dynamics.py  plot.py  system.py
examples/: convergence.py  elena_benchmark.py  free_particle.py  harmonic.py  main.py  noise.py  periodic.py  rms.py
localized_sse/harmonic/: dynamics.py  plot.py  system.py
localized_sse/sodium_copper/: dynamics.py  plot.py  system.py
scripts/: madrid_presentation.py
