[tool.poetry]
name = "localized_sse"
version = "0.1.0"
description = ""
authors = ["Matthew Ord <matthew.ord1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
surface_potential_analysis = { path = "lib/surface_potential_analysis", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
