[tool.poetry]
name = "caldeira_legget_examples"
version = "0.1.0"
description = ""
authors = ["Matthew Ord <matthew.ord1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
surface_potential_analysis = { path = "lib/surface_potential_analysis", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.1"

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "D104", "D100", "D417", "TD003", "TD002"]
unfixable = ["ERA001", "T201"]

[tool.ruff.extend-per-file-ignores]
"examples/**/*" = ["T201", "INP001"]
"tests/**/*" = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
